[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Art/UI/ui_hotbar_7_locked.png" type="Texture" id=1]
[ext_resource path="res://Assets/Art/UI/ui_hotbar_8_locked.png" type="Texture" id=2]
[ext_resource path="res://Assets/Art/UI/ui_hotbar_4_locked.png" type="Texture" id=3]
[ext_resource path="res://Assets/Art/UI/ui_hotbar_5_locked.png" type="Texture" id=4]
[ext_resource path="res://Assets/Art/UI/ui_hotbar_6_locked.png" type="Texture" id=5]
[ext_resource path="res://Assets/Art/UI/ui_hotbar_1_locked.png" type="Texture" id=6]
[ext_resource path="res://Assets/Art/UI/ui_hotbar_2_locked.png" type="Texture" id=7]
[ext_resource path="res://Assets/Art/UI/ui_hotbar_3_locked.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Machines/Hotbar.gd" type="Script" id=9]

[node name="Hotbar" type="Control"]
margin_left = 616.0
margin_top = 976.0
margin_right = 656.0
margin_bottom = 1016.0
rect_scale = Vector2( 2.5, 2.5 )
mouse_filter = 2
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 7.5
anchor_bottom = 1.2
margin_right = -3.05176e-05
margin_bottom = -8.0
rect_min_size = Vector2( 300, 40 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 300, 40 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="TextureRect/Margin"]
margin_right = 300.0
margin_bottom = 40.0

[node name="slot_1" type="TextureRect" parent="TextureRect/Margin/HBox"]
margin_right = 32.0
margin_bottom = 40.0
texture = ExtResource( 6 )

[node name="slot_2" type="TextureRect" parent="TextureRect/Margin/HBox"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 40.0
texture = ExtResource( 7 )

[node name="slot_3" type="TextureRect" parent="TextureRect/Margin/HBox"]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 40.0
texture = ExtResource( 8 )

[node name="slot_4" type="TextureRect" parent="TextureRect/Margin/HBox"]
margin_left = 108.0
margin_right = 140.0
margin_bottom = 40.0
texture = ExtResource( 3 )

[node name="slot_5" type="TextureRect" parent="TextureRect/Margin/HBox"]
margin_left = 144.0
margin_right = 176.0
margin_bottom = 40.0
texture = ExtResource( 4 )

[node name="slot_6" type="TextureRect" parent="TextureRect/Margin/HBox"]
margin_left = 180.0
margin_right = 212.0
margin_bottom = 40.0
texture = ExtResource( 5 )

[node name="slot_7" type="TextureRect" parent="TextureRect/Margin/HBox"]
margin_left = 216.0
margin_right = 248.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="slot_8" type="TextureRect" parent="TextureRect/Margin/HBox"]
margin_left = 252.0
margin_right = 284.0
margin_bottom = 40.0
texture = ExtResource( 2 )
